fix: 오류 수정 및 리펙토링

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # 실제 서비스용 .env 파일은 Git에 커밋하지 마세요.
 
 # STAGE: prod | dev
-STAGE=dev
+STAGE=prod
 
 # CSV_PATH: Access Key CSV 파일 경로
 CSV_PATH=app/api/secrets/
